--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><RESUME</title>
+    <title>RESUME</title>
     <link rel="stylesheet" type="text/css" media="screen" href="index1.css">
     <script src='main.js'></script>
     
